[package]
name = "nonogram"
version = "0.1.0"
authors = ["Tanner Sundwall <stanner@pdx.edu>"]
description = "Nonogram puzzle game in Rust"
repository = "https://github.com/Sundwalltanner/Rust-Nonogram.git"
readme = "README.md"
license = "MIT"
keywords = ["nonogram", "puzzle", "game"]
categories = ["games"]
edition = "2018"

[dependencies]
rand = "0.7.3"
clap = "2.33.0"
piston = "0.49.0"
piston2d-opengl_graphics = "0.72.0"
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.63.0"
find_folder = "0.3.0"
chrono = "0.4.10"